Fix wrapping of text in description

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,6 +1,8 @@
 pre {
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
   max-height: 150px;
   padding: 5px;
   margin-top: 5px;
